[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/pause_screen.gd" type="Script" id=2]

[node name="PauseScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.9
margin_left = -23.0
margin_right = 23.0
custom_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="Menu"]
margin_top = 128.0
margin_right = 455.0
margin_bottom = 183.0
text = "Paused
"
align = 1

[node name="ResumeButton" type="Button" parent="Menu"]
margin_top = 193.0
margin_right = 455.0
margin_bottom = 225.0
text = "Resume"

[node name="RestartButton" type="Button" parent="Menu"]
margin_top = 235.0
margin_right = 455.0
margin_bottom = 267.0
text = "Restart Level"

[node name="OptionsButton" type="Button" parent="Menu"]
margin_top = 277.0
margin_right = 455.0
margin_bottom = 309.0
disabled = true
text = "Options"

[node name="ExitButton" type="Button" parent="Menu"]
margin_top = 319.0
margin_right = 455.0
margin_bottom = 351.0
text = "Exit to Menu"

[connection signal="pressed" from="Menu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menu/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Menu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/ExitButton" to="." method="_on_ExitButton_pressed"]
